// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreatorList Actions setPageNum test 1`] = `
Array [
  Object {
    "type": "Admin/CreatorList/setPageNum",
  },
]
`;

exports[`CreatorList Reducers initial state 1`] = `
Object {
  "pageNum": 1,
}
`;

exports[`CreatorList Reducers setPageNum 1`] = `
Object {
  "pageNum": 4,
}
`;
